--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ 13.113.178.94 }}
+          username: ${{ failover }}
+          key: ${{ ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINN+QAxaJsivv8zpouL11hdDWQmWj8xnOM71z2s6Pr/w yamac@DESKTOP-9EI6ST5 }}
           source: "./*"
           target: "/var/www/quonsuntory"
